klass-model-converters/klass-compiler/src/test/resources/errors/DuplicatePropertyKeyword.klass
package dummy

class Dummy
{
    key key id: ID
}
